# aoc_2023

./: README.md  aoc.cpp  compile.sh  meson.build  setup.sh
day_1/: day_1.h  day_1_p_1.cpp  day_1_p_2.cpp
day_2/: day_2.h  day_2_p_1.cpp
day_3/: day_3.h  day_3_p_1.cpp  day_3_p_2.cpp
day_4/: day_4.h  day_4_p_1.cpp  day_4_p_2.cpp
day_6/: day_6_p_1.cpp  day_6_p_2.cpp
day_7/: day_7.h
day_x/: day_x.h  day_x_p_1.cpp  day_x_p_2.cpp
src/: aoc.cpp  day_1_p_1.cpp  day_1_p_2.cpp  day_2_p_1.cpp  day_2_p_2.cpp  day_3_p_1.cpp  day_3_p_2.cpp  day_4_p_1.cpp  day_4_p_2.cpp  day_5_p_1.cpp  day_5_p_2.cpp  day_6.h  day_6_p_1.cpp  day_6_p_2.cpp  day_7_p_1.cpp  day_7_p_2.cpp  day_8_p_1.cpp  day_8_p_2.cpp  days.h
src/util/: util.cpp  util.h
util/: util.cpp  util.h
